fixed scrollbar and positioning on smaller/larger screens

--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,6 @@
+::-webkit-scrollbar { 
+    display: none; 
+}
 .backgroundImage{
 	width: 100%;
 	height: 100vh;
